--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "plotly.js": "^1.58.2",
+    "react-plotly.js": "^2.5.1"
   }
 }
